# ezw_core

./: Cargo.toml
src/core/: app.rs  log.rs  mod.rs
src/core/server/: axum.rs
