[package]
name = "ezw_core"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
serde_yaml = "0.9.14"

axum = { version = "0.7.2"}
hyper = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }

tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tower-service = "0.3.2"
tower-layer = "0.3.2"

http-body = "1.0"
http = "1.0"
tower = "0.4.13"
futures = "0.3.28"
